name:                  deep-shallow-edsl
version:               0.1
synopsis:              Combining Deep and Shallow Embedding for EDSL
description:           See: <https://github.com/emilaxelsson/deep-shallow-edsl>
license:               BSD3
license-file:          LICENSE
author:                Emil Axelsson
maintainer:            emax@chalmers.se
copyright:             Copyright (c) 2014, Emil Axelsson, Josef Svenningsson
build-type:            Simple
cabal-version:         >=1.10

library
  exposed-modules:
    FunC

  other-extensions:
    GADTs,
    FlexibleContexts,
    FlexibleInstances,
    TypeFamilies

  build-depends:
    base <5,
    mtl,
    array,
    containers,
    tree-view >=0.4

  default-language:
    Haskell2010
